Fixed broken markdown formatting in tabs, and updates CSS in tabs to use flow spacing.

--- a/site/_scss/blocks/_tabs.scss
+++ b/site/_scss/blocks/_tabs.scss
@@ -51,4 +51,10 @@ web-tabs {
   [aria-selected='true']::after {
     background: var(--color-primary);
   }
+
+  web-tab {
+    > * + * {
+      margin-top: var(--flow-space);
+    }
+  }
 }
